--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Simple Tailwind Starter</title>
-    <style>
+    <title>Loopstudios</title>
+    <!-- <style>
       #hero {
         background-image: url("./images/desktop/image-hero.jpg");
         background-repeat: no-repeat;
@@ -25,7 +25,7 @@
           background-image: url("./images/mobile/image-hero.jpg");
         }
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <!-- Hero section  -->
