--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
     <!-- Hero section  -->
     <section id="hero">
       <!-- hero container  -->
-      <div class="container max-w 6xl mx-auto px-6 py-12">
+      <div class="container max-w-6xl mx-auto px-6 py-12">
+        <!-- menu/logo container  -->
         <nav class="flex items-center justify-between font-bold text-white">
+          <!-- logo  -->
           <img src="images/logo.svg" alt="" />
           <!-- Menu -->
-          <div class="hidden font-alata md:flex md:space-x-8">
+          <div class="hidden h-10 font-alata md:flex md:space-x-8">
             <div class="group">
               <a href="#">About</a>
               <div
@@ -68,11 +70,11 @@
             </div>
           </div>
 
-          <!-- @todo Hamburger Button  -->
+          <!-- Hamburger Button  -->
           <div class="md:hidden">
             <button
               type="button"
-              class="open z-40 block hamburger md:hidden focus:outline-none"
+              class="z-40 block hamburger md:hidden focus:outline-none"
               id="menu-btn"
             >
               <span class="hamburger-top"></span>
@@ -82,10 +84,10 @@
           </div>
         </nav>
 
-        <!-- @todo Mobile Menu  -->
+        <!-- Mobile Menu  -->
         <div
           id="menu"
-          class="absolute top-0 bottom-0 left-0 flex flex-col self-end w-full min-h-screen py-1 pt-40 pl-12 space-y-3 text-lg text-white uppercase bg-black"
+          class="absolute top-0 bottom-0 left-0 hidden flex-col self-end w-full min-h-screen py-1 pt-40 pl-12 space-y-3 text-lg text-white uppercase bg-black"
         >
           <a href="#" class="hover:text-pink-500">About</a>
           <a href="#" class="hover:text-pink-500">Careers</a>
@@ -106,7 +108,7 @@
     <section id="feature">
       <!-- Feature  container  -->
       <div
-        class="relative container flex flex-col max-w-6xl mx-auto my-32 text-gray-900 md:flex-row"
+        class="relative container flex flex-col max-w-6xl mx-auto my-32 text-gray-900 md:flex-row md:px-0"
       >
         <!-- Image  -->
         <img src="images/desktop/image-interactive.jpg" alt="" />
@@ -115,11 +117,11 @@
           class="top-48 pr-0 bg-white md:absolute md:right-0 md:py-20 md:pl-20"
         >
           <h2
-            class="max-w-lg mt-10 mb-6 font-sans text-center text-gray-900 uppercase md:text-5xl md:mt-0 md:text-left"
+            class="max-w-lg mt-10 mb-6 font-sans text-4xl text-center text-gray-900 uppercase md:text-5xl md:mt-0 md:text-left"
           >
             The leader in interactive VR
           </h2>
-          <p class="max-w-md text-center md:text-left">
+          <p class="mx-auto max-w-md text-center md:text-left">
             Founded in 2011, Loopstudios has been producing world-class virtual
             reality projects for some of the best companies around the globe.
             Our award-winning creations have transformed businesses through
@@ -132,7 +134,7 @@
     <!-- Creations Section  -->
     <section id="creation">
       <!-- Creation Container  -->
-      <div class="container max-w-6xl mx-auto my-32 px-6 text-gray-900">
+      <div class="container max-w-6xl mx-auto my-32 px-6 text-gray-900 md:px-0">
         <!-- Creation Header  -->
         <div class="flex justify-center mb-20 md:justify-between">
           <h class="text-4xl text-center uppercase md:text-left md:text-5xl"
