--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Loopstudios</title>
-    <!-- <style>
+    <style>
       #hero {
         background-image: url("./images/desktop/image-hero.jpg");
         background-repeat: no-repeat;
@@ -25,7 +25,7 @@
           background-image: url("./images/mobile/image-hero.jpg");
         }
       }
-    </style> -->
+    </style>
   </head>
   <body>
     <!-- Hero section  -->
